tests/e2e/not_allowed/assert.error
Error: syntax error in story at line 1, column 1

1|    assert = 1
      ^^^^^^

E0030: `assert` is reserved for future use
